--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-java</artifactId>
-                <version>2.24.1</version>
-            </dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.24.1</version>
+        </dependency>
 
 
 
@@ -161,6 +161,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>${java-version}</source>
                     <target>${java-version}</target>
@@ -169,8 +170,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
                 <configuration>
-                    <warName>springmvc</warName>
+                    <warName>SpringMVC</warName>
                 </configuration>
             </plugin>
             <plugin>
