--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-  <groupId>com.shaunabram.springmvc</groupId>
-  <artifactId>SpringMVC</artifactId>
-  <packaging>war</packaging>
-  <name>SpringMVC Maven Webapp...</name>
-  
-
-
-
-   
-
+    <groupId>com.shaunabram.springmvc</groupId>
+    <artifactId>SpringMVC</artifactId>
+    <packaging>war</packaging>
+    <name>SpringMVC Maven Webapp</name>
     <version>1.0.0-BUILD-SNAPSHOT</version>
+
     <properties>
         <java-version>1.6</java-version>
         <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
     </properties>
+
     <dependencies>
-
-
-         <dependency>
-          <groupId>org.apache.maven.surefire</groupId>
-          <artifactId>surefire-junit47</artifactId>
-          <version>2.12</version>
-         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>2.12</version>
+        </dependency>
 
 
         <!-- Spring -->
@@ -38,7 +32,7 @@
                 <exclusion>
                     <groupId>commons-logging</groupId>
                     <artifactId>commons-logging</artifactId>
-                 </exclusion>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -105,7 +99,7 @@
             <version>1.2</version>
         </dependency>
 
-        <!-- Test -->
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -116,48 +110,74 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>2.24.1</version>
+            <scope>test</scope>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert-core</artifactId>
+            <version>2.0M7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>org.springframework.maven.release</id>
             <name>Spring Maven Release Repository</name>
             <url>http://maven.springframework.org/release</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>false</enabled></snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <!-- For testing against latest Spring snapshots -->
         <repository>
             <id>org.springframework.maven.snapshot</id>
             <name>Spring Maven Snapshot Repository</name>
             <url>http://maven.springframework.org/snapshot</url>
-            <releases><enabled>false</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
         <!-- For developing against latest Spring milestones -->
         <repository>
             <id>org.springframework.maven.milestone</id>
             <name>Spring Maven Milestone Repository</name>
             <url>http://maven.springframework.org/milestone</url>
-            <snapshots><enabled>false</enabled></snapshots>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
-              <id>central</id>
-              <name>Maven Repository Switchboard</name>
-              <layout>default</layout>
-              <url>http://repo1.maven.org/maven2</url>
-              <snapshots>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
                 <enabled>false</enabled>
-              </snapshots>
-            </repository>
+            </snapshots>
+        </repository>
     </repositories>
+
     <build>
         <finalName>SpringMVC</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -180,51 +200,48 @@
                 <artifactId>tomcat-maven-plugin</artifactId>
                 <version>1.1</version>
             </plugin>
-
             <plugin>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.6</version>
-                    <executions>
-                      <execution>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
                         <goals>
-                          <goal>integration-test</goal>
-                          <goal>verify</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
-                      </execution>
-                    </executions>
-                  </plugin>
-
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>maven-jetty-plugin</artifactId>
-                    <version>6.1.16</version>
-                    <configuration>
-                      <scanIntervalSeconds>10</scanIntervalSeconds>
-                      <stopPort>8005</stopPort>
-                      <stopKey>STOP</stopKey>
-                    </configuration>
-                    <executions>
-                      <execution>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+                <version>6.1.16</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <stopPort>8005</stopPort>
+                    <stopKey>STOP</stopKey>
+                </configuration>
+                <executions>
+                    <execution>
                         <id>start-jetty</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                          <goal>run</goal>
+                            <goal>run</goal>
                         </goals>
                         <configuration>
-                          <scanIntervalSeconds>0</scanIntervalSeconds>
-                          <daemon>true</daemon>
+                            <scanIntervalSeconds>0</scanIntervalSeconds>
+                            <daemon>true</daemon>
                         </configuration>
-                      </execution>
-                      <execution>
+                    </execution>
+                    <execution>
                         <id>stop-jetty</id>
                         <phase>post-integration-test</phase>
                         <goals>
-                          <goal>stop</goal>
+                            <goal>stop</goal>
                         </goals>
-                      </execution>
-                    </executions>
-                  </plugin>
-
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
