--- a/pom.xml
+++ b/pom.xml
@@ -243,5 +243,11 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <testResources>
+            <testResource>
+                <directory>src/main/webapp/WEB-INF</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
